--- a/AREnvTex/Base.lproj/Main.storyboard
+++ b/AREnvTex/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14252.5"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,12 +13,61 @@
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="AREnvTex" customModuleProvider="target" sceneMemberID="viewController">
-                    <arscnView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="BrB-h1-WRS">
+                    <view key="view" contentMode="scaleToFill" id="s7k-gS-7GI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </arscnView>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLK-zO-XfB">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <viewLayoutGuide key="safeArea" id="ZsW-RH-bAy"/>
+                            </arscnView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="rps-QB-f5i">
+                                <rect key="frame" x="20" y="567" width="335" height="80"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hti-iq-Bte">
+                                        <rect key="frame" x="0.0" y="0.0" width="56" height="80"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eo9-Db-tEh">
+                                        <rect key="frame" x="56" y="0.0" width="55.5" height="80"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fgv-UE-zcV">
+                                        <rect key="frame" x="111.5" y="0.0" width="56" height="80"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lkv-6d-tXS">
+                                        <rect key="frame" x="167.5" y="0.0" width="56" height="80"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ftB-jE-QuO">
+                                        <rect key="frame" x="223.5" y="0.0" width="55.5" height="80"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ttv-RK-9ec">
+                                        <rect key="frame" x="279" y="0.0" width="56" height="80"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="qXQ-DN-Cw6"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="LLK-zO-XfB" firstAttribute="leading" secondItem="kG6-rb-XXN" secondAttribute="leading" id="CFk-Yb-4vf"/>
+                            <constraint firstItem="kG6-rb-XXN" firstAttribute="bottom" secondItem="rps-QB-f5i" secondAttribute="bottom" constant="20" id="LG8-xP-iNT"/>
+                            <constraint firstItem="kG6-rb-XXN" firstAttribute="bottom" secondItem="LLK-zO-XfB" secondAttribute="bottom" id="S3H-YL-1Zo"/>
+                            <constraint firstItem="rps-QB-f5i" firstAttribute="leading" secondItem="kG6-rb-XXN" secondAttribute="leading" constant="20" id="b2S-ta-8MI"/>
+                            <constraint firstItem="LLK-zO-XfB" firstAttribute="top" secondItem="kG6-rb-XXN" secondAttribute="top" id="f7w-Os-eei"/>
+                            <constraint firstItem="kG6-rb-XXN" firstAttribute="trailing" secondItem="rps-QB-f5i" secondAttribute="trailing" constant="20" id="hTK-Yz-ZF7"/>
+                            <constraint firstItem="kG6-rb-XXN" firstAttribute="trailing" secondItem="LLK-zO-XfB" secondAttribute="trailing" id="hbC-un-jmg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="kG6-rb-XXN"/>
+                    </view>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
+                        <outlet property="envTexture1" destination="hti-iq-Bte" id="IgF-Gc-dW9"/>
+                        <outlet property="envTexture2" destination="eo9-Db-tEh" id="HCE-qR-iSZ"/>
+                        <outlet property="envTexture3" destination="fgv-UE-zcV" id="Zfm-60-Ku8"/>
+                        <outlet property="envTexture4" destination="lkv-6d-tXS" id="U9R-RU-YcT"/>
+                        <outlet property="envTexture5" destination="ftB-jE-QuO" id="f66-Ic-DPa"/>
+                        <outlet property="envTexture6" destination="ttv-RK-9ec" id="hfg-I9-Uu0"/>
+                        <outlet property="sceneView" destination="LLK-zO-XfB" id="wlU-3L-vWv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
